look like all done so good

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
   <body>
     <div id="block_1">
       <h3>Приклад напрямків:</h3>
-      <ul>
-        <li>Греція — морський відпочинок та екскурсії по античним пам'яткам</li>
-        <li>Таїланд — екзотична природа, пляжі та незабутня культура</li>
-        <li>Австрія — гірськолижні курорти та активний відпочинок взимку</li>
+      <ul id="block_1_index_ul">
+        <li>Греція — морський відпочинок та екскурсії по античним пам'яткам</li><br>
+        <li>Таїланд — екзотична природа, пляжі та незабутня культура</li><br>
+        <li>Австрія — гірськолижні курорти та активний відпочинок взимку</li><br>
       </ul>
     </div>
     <div id="block_2">
@@ -44,11 +44,11 @@
       <p id="text_block_3_index">Немає нічого ліпшого за відпочинок у Турреччині</p>
     </div>
     <div id="block_4">
-      <h3>Акції та знижки</h3>
-      <ul id="block_4_ul_index">
+      <h3 id="block_4_h3">Акції та знижки</h3>
+      <ol id="block_4_ul_index">
         <li>Знижка 20% на тури до Туреччини на літо 2024!</li>
         <li>Раннє бронювання гірськолижних турів зі знижкою до 30%!</li>
-      </ul>
+      </ol>
     </div>
   </body>
   <footer>
