--- a/faq.html
+++ b/faq.html
@@ -22,12 +22,12 @@
   <body>
     <div id="block_1">
       <h3 id="block_1_h3">Часті запитання клієнтів:</h3>
-      <ol>
-        <li>Як забронювати тур?</li>
-        <li>Які документи потрібні для поїздки?</li>
-        <li>Чи можна змінити дату подорожі після бронювання?</li>
-        <li>Чи можу я повернути гроші за тур у випадку скасування?</li>
-        <li>Чи є можливість оплати туру в розстрочку?</li>
+      <ol id="block_1_ol_faq">
+        <li>Як забронювати тур?</li><br>
+        <li>Які документи потрібні для поїздки?</li><br>
+        <li>Чи можна змінити дату подорожі після бронювання?</li><br>
+        <li>Чи можу я повернути гроші за тур у випадку скасування?</li><br>
+        <li>Чи є можливість оплати туру в розстрочку?</li><br>
       </ol>
     </div>
     <div id="block_2">
@@ -37,22 +37,28 @@
     <div id="block_3">
       <h3 id="block_1_h3">Відповіді на запитання:</h3>
       <ol id="block_3_ol_faq">
-        <li>Ви можете забронювати тур онлайн на нашому сайті або зателефонувати нам для особистої консультації.</li>
+        <li>
+          Ви можете забронювати тур онлайн на нашому сайті або зателефонувати
+          нам для особистої консультації.
+        </li><br>
         <li>
           Для різних напрямків потрібні різні документи.
           Наші менеджери допоможуть вам підготувати всі необхідні папери, включаючи візи.
-        </li>
-        <li>Так, але зміна дати залежить від умов туроператора і наявності місць. Ми допоможемо вам з цим питанням.</li>
+        </li><br>
+        <li>Так, але зміна дати залежить від умов туроператора і наявності місць. Ми допоможемо вам з цим питанням.</li><br>
         <li>
           Умови повернення залежать від типу туру та часу, що залишився до початку подорожі.
           Зазвичай це прописується в договорі.
-        </li>
-        <li>Так, ми пропонуємо оплату в декілька етапів або через банківські партнери, що дозволяє оплачувати тур частинами.</li>
+        </li><br>
+        <li>
+          Так, ми пропонуємо оплату в декілька етапів або через банківські партнери,
+          що дозволяє оплачувати тур частинами.
+        </li><br>
       </ol>
     </div>
     <div id="block_4">
-      <h3>Цікавий факт про відпочинок</h3>
-      <p>
+      <h3 id="h3_block_4_faq">Цікавий факт про відпочинок</h3>
+      <p id="text_block_4_faq">
         Подорожі можуть зробити вас щасливішими, ніж покупки.
         Дослідження показали, що люди більше цінують досвід і спогади, отримані під час подорожей, ніж матеріальні речі.
         З часом спогади про поїздку приносять більше радості, ніж новий гаджет чи одяг,
